--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "preview": "vite preview"
   },
-  "devDependencies": {
-    "vite": "^7.3.0"
+  "dependencies": {
+    "vite": "^5.4.0"
   }
 }
