--- a/.dockerignore
+++ b/.dockerignore
@@ -1,10 +1,11 @@
 node_modules
+**/node_modules
 .git
 .DS_Store
 dist
 coverage
 .env
-.terraform
-.terraform.lock.hcl
-terraform.tfstate
-terraform.tfstate.backup
+**/.terraform
+**/.terraform.lock.hcl
+**/terraform.tfstate
+**/terraform.tfstate.backup
